Change a lot of things on index.html.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello world!</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
+    <title>Charles's Weekend Adventure</title>
   </head>
   <body>
-    <h1>My first web page!</h1>
-    <h2>Written with the guidance of <em>Epicodus</em>.<h2>
+    <h1>Charles's Weekend Adventure</h1>
+    <h2>Written with assistance from <em>Tiffany</em>.<h2>
 
-    <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>. It's a great school for learning web programming!</p>
-
-    
+    <h3>Waterfall Visit</h3>
+    <p>Meditation is medication, especially under a waterfall!</p>
+    <ul>
+      <li>Husky joined the adventure</li>
+      <li>The moss was off the <strong>hook</strong>!</li>
+        <ul>
+          <li>The <font color="#ADFF2F">greenest</font> of the green moss (forgot the latin)</li>
+          <li>Fairy beings were <em>everywhere</em> man!</li>
+        </ul>
+    </ul>
+    <h3>Deer Reunited with Family<img src="http://lorempixel.com/400/200/sports/"></h3>
+      <p>
+        <ol>
+          <li>Locate animal in distress</li>
+          <li><a href="http://www.google.com">Call authorities</a></li>
+          <li>Take matters into your own hands</li>
+          <li>Happy ending: deer reunited with mama!</li>
+        </ol>
+      </p>
+      </body>
+</html>
